TM-11214 Fix overflow ui issues on database and storage  views

--- a/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
+++ b/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
@@ -6,7 +6,7 @@
 
 .tds-angular-component-content
   .dialog-container
-    border: 2px solid #63a242
+    border: 2px solid #5f9fcf
     padding: 0
   .prop
     padding: 5px
@@ -34,8 +34,8 @@
     color: #00E
   table
     width: 100%
-    tr
-      border: 2px solid #fff
+    tr + tr
+      border-top: 2px solid #fff
     th
       background: #CCCCCC
       color: #000
